fix: Anchor color improved for readability

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --color-anchor: #5d70c7;
+  --color-anchor: #93a7ff;
   --color-dont-exists: #414141;
 
   --dark-primary: #171717;
